Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-18974

Intermittent failure in ep_engine test_expiration_on_warmup

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.0
    • .master
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown

    Description

      The following failure is occasionally seen in test_expiration_on_warmup :

      00:03:31.896 /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-master/ep-engine/tests/ep_testsuite.cc:979 Test failed: `' (Expected `0', got `1' - The item should have been expired.)
      00:03:31.896 Running [0005/0164]: expiration on warmup (couchstore)...(2 sec) DIED
      

      Full log: http://cv.jenkins.couchbase.com/job/ep-engine-threadsanitizer-master/335/consoleFull

      Attachments

        For Gerrit Dashboard: MB-18974
        # Subject Branch Project Status CR V

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty